# arm_camera_calibration

./: .gitignore  CMakeLists.txt  README.md  package.xml  poses.txt
data/: camera.xml  eMc.txt  eMc.yaml  pose_cPo_1.yaml  pose_cPo_2.yaml  pose_cPo_3.yaml  pose_cPo_4.yaml  pose_cPo_5.yaml  pose_cPo_6.yaml  pose_cPo_7.yaml  pose_cPo_8.yaml  pose_cPo_9.yaml  pose_fPe_1.yaml  pose_fPe_2.yaml  pose_fPe_3.yaml  pose_fPe_4.yaml  pose_fPe_5.yaml  pose_fPe_6.yaml  pose_fPe_7.yaml  pose_fPe_8.yaml  pose_fPe_9.yaml
launch/: robot_poses.launch
src/: robot_node.cpp
